--- a/frontend/src/templates/sidenav/sidenav.component.html
+++ b/frontend/src/templates/sidenav/sidenav.component.html
@@ -2,13 +2,13 @@
 
     <mat-toolbar color="primary" class="side-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-    
+
      <span class="nav-spacer"></span>
      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
        <mat-icon>favorite</mat-icon>
      </button>
-     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+     <button (click)='logout()' mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>logout</mat-icon>
     </button>
    </mat-toolbar>
 
