improve app design

--- a/frontend/src/templates/sidenav/sidenav.component.sass
+++ b/frontend/src/templates/sidenav/sidenav.component.sass
@@ -1,2 +1,24 @@
 .app-link
   margin-right: 40px
+.mat-toolbar.mat-primary
+  background-color: #006300
+  
+.mat-drawer 
+  .logo
+    img
+      height: 150px
+      margin: 25px 55px 25px
+  
+  .mat-list-base .mat-list-item
+    background-color: #68a975 
+    color: white
+    margin: 17px
+    border-radius: 18px
+  .mat-list-base .mat-list-item, .mat-list-base .mat-list-option  
+    width: auto
+  border-top-right-radius: 13px 208px
+  border-bottom-right-radius: 60px 172px
+  border: none
+  background-color: #006300
+
+
