--- a/frontend/src/reclamations/reclamations.component.html
+++ b/frontend/src/reclamations/reclamations.component.html
@@ -10,22 +10,31 @@
       (scrolled)="onScrollDown()"
       (scrolledUp)="onScrollUp($event)"
     ></div>
-      <mat-card *ngFor="let item of reclamationsList" class="rec-card">
-        <mat-card-header>
-          <div mat-card-avatar class="header-image" [ngStyle]="{'background-image': 'url(' + item.imagePath + ')'}" ></div>
-          <mat-card-title>{{item.title}}</mat-card-title>
-          <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <img mat-card-image [src]="item.imagePath" alt="Photo example">
+      <div class="container-fluid">
+        <div class="row">
+          <div   *ngFor="let item of reclamationsList"  class="col-md-6"> 
+            <mat-card class="rec-card">
+            
+              <mat-card-header>
+                <div mat-card-avatar class="header-image" [ngStyle]="{'background-image': 'url(' + item.imagePath + ')'}" ></div>
+                <mat-card-title>{{item.title}}</mat-card-title>
+                <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
+              </mat-card-header>
+              <mat-card-content>
+                  <img style="height: 300px;" mat-card-image [src]="item.imagePath" alt="Photo example">
+      
+                <p>
+                  {{item.body}}.
+                </p>
+              </mat-card-content>
+              <mat-card-actions>
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+              </mat-card-actions>
+            </mat-card>
+          </div>
+ 
+        </div>
+      </div>
 
-          <p>
-            {{item.body}}.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
   </div>
