--- a/frontend/src/templates/sidenav/sidenav.component.html
+++ b/frontend/src/templates/sidenav/sidenav.component.html
@@ -16,6 +16,11 @@
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+      <div class="logo">
+        <img src="assets/images/logo.png"  alt="">
+      </div>             
+      
+
         <mat-nav-list>
           <a mat-list-item [routerLink]="nav" *ngFor="let nav of fillerNav">{{nav}}</a>
         </mat-nav-list>
