--- a/frontend/src/reclamations/reclamations.component.sass
+++ b/frontend/src/reclamations/reclamations.component.sass
@@ -1,8 +1,50 @@
-.main-panel-rec
-  height: 100%
-  overflow-y: scroll
-.rec-card
-  margin: 15px
-.header-image
-  background-size: cover
-    
+h3
+  font-size: 25px
+  font-weight: 600
+  margin-bottom: .2em
+  color: #2b6e2e
+.card
+  margin-top: 15px
+  width: 100%
+  height: 300px !important
+  position: relative
+
+  h4
+    font-size: 16px
+    font-weight: 500
+    margin-bottom: .2em
+  p
+    font-size: 16px
+  img
+    width: 100%
+    height: 100%
+    display: block
+  .container-image
+    height: 100%
+
+  .overlay
+    position: absolute
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 100%
+    opacity: 0
+    transition: 0.75s ease
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+
+  .image
+    opacity: 1
+    transition: 0.75s ease
+    backface-visibility: hidden
+
+.card:hover
+  .image
+    opacity: 0.3
+
+  .effect2
+    opacity: 1
