--- a/frontend/src/reclamations/reclamations.component.sass
+++ b/frontend/src/reclamations/reclamations.component.sass
@@ -1,3 +1,9 @@
+.main-panel-rec
+  height: 100%
+  overflow-y: scroll
+  .radius
+    border-radius: 117px
+    margin-top: 5px
 h3
   font-size: 25px
   font-weight: 600
@@ -41,7 +47,7 @@ h3
     opacity: 1
     transition: 0.75s ease
     backface-visibility: hidden
-
+  
 .card:hover
   .image
     opacity: 0.3
