fix assets path

--- a/frontend/src/reclamations/reclamations-details/reclamations-details.component.html
+++ b/frontend/src/reclamations/reclamations-details/reclamations-details.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-md-6">
 
-        <div class="container-image" [ngStyle]="{'background-image': 'url(' + reclamation?.imagePath + ')'}">
+        <div class="container-image" [ngStyle]="{'background-image': 'url(' + assetsUrl+reclamation?.image + ')'}">
 
         </div>
       </div>
