--- a/frontend/src/reclamations/reclamations.component.html
+++ b/frontend/src/reclamations/reclamations.component.html
@@ -17,7 +17,7 @@
             <h3 class="mb-1 ">{{item.title}} </h3>
           </div>
           <div class="card">
-            <div class="container-image"><img [src]="item.imagePath" class="image"></div>
+            <div class="container-image"><img [src]="assetsUrl+item.image" class="image"></div>
             <a href="#" class="light-backgrounds">
               <div class="overlay effect2">
                 <h4>{{ item.updatedAt | date:'EEEE, d MMMM ,y , h:mm a ':'+0100':'fr' }}</h4>
