--- a/frontend/src/zones/zones.component.html
+++ b/frontend/src/zones/zones.component.html
@@ -1,28 +1,58 @@
 <h1> Zones disponibles </h1>
-<form class="search-post-form">
-  <mat-form-field class="full-width">
-    <mat-label>Zones</mat-label>
-    <input #input matInput placeholder="Ex. post name" class="search-post-form">
-  </mat-form-field>
-</form>
+<div class="row actions ">
+  <form class="search-post-form col-md-2">
+    <mat-form-field class="full-width">
+      <mat-label>Zones</mat-label>
+      <input #input matInput placeholder="Ex. post name" class="search-post-form">
+    </mat-form-field>
+  </form>
+  <div class="add-btn col-md-1 offset-md-9">
+    <button-component [type]="'button'" [classes]="'btn-lg btn-block btn-primary default-bg radius'"
+      (clicked)="addZone()"> Ajouter
+    </button-component>
+  </div>
+</div>
+
+
 <div class="mat-elevation-z8">
-  <table style="width: 100%;" mat-table [dataSource]="dataSource" matSort >
+  <table style="width: 100%;" mat-table [dataSource]="dataSource" matSort>
 
     <!-- Position Column -->
     <ng-container matColumnDef="_id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header > Id. </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
       <td mat-cell *matCellDef="let element"> {{element?._id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header > Nom </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
       <td mat-cell *matCellDef="let element"> {{element?.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button class="mat-raised-button" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <mat-icon>dehaze</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="edit(element)">
+            <mat-icon>edit</mat-icon>
+            <span>Modifier</span>
+          </button>
+          <button mat-menu-item (click)="delete(element._id)">
+            <mat-icon>delete_forever</mat-icon>
+            <span>Supprimer</span>
+          </button>
+          
+        </mat-menu>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator  [length]="dataSource.count$ | async"  [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [length]="dataSource.count$ | async" [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons>
+  </mat-paginator>
 </div>
