HOTFIX remove zone

--- a/frontend/src/users/user-form-dialog/user-form-dialog.component.html
+++ b/frontend/src/users/user-form-dialog/user-form-dialog.component.html
@@ -39,7 +39,7 @@
 			</mat-form-field>
 		</div>
 
-		<div class="col-md-12 form-group">
+		<!-- <div class="col-md-12 form-group">
 			<mat-form-field appearance="fill">
 				<mat-label>Selectionner une zone</mat-label>
 				<mat-select formControlName="zone">
@@ -49,7 +49,7 @@
 				</mat-select>
 
 			</mat-form-field>
-		</div>
+		</div> -->
 
 
 
