--- a/frontend/src/users/users.component.html
+++ b/frontend/src/users/users.component.html
@@ -37,10 +37,10 @@
       <td mat-cell *matCellDef="let element"> {{element?.role}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="zone">
+    <!-- <ng-container matColumnDef="zone">
       <th mat-header-cell *matHeaderCellDef> Zone </th>
       <td mat-cell *matCellDef="let element"> {{element?.zone?.name}} </td>
-    </ng-container>
+    </ng-container> -->
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
