--- a/frontend/src/categories/categories.component.sass
+++ b/frontend/src/categories/categories.component.sass
@@ -11,5 +11,8 @@
       width: 100%
   .add-btn
     margin-bottom: 10px
+    position: absolute
+    right: 20px
   .actions
     margin-left: 0px
+    display: flex
