--- a/frontend/src/points/points.component.html
+++ b/frontend/src/points/points.component.html
@@ -1,9 +1,9 @@
-<h1> Zones disponibles </h1>
+<h1> Points disponibles </h1>
 <form class="search-post-form">
   
   <mat-form-field class="full-width">
-    <mat-label>Zones</mat-label>
-    <input #input matInput placeholder="Ex. post name" class="search-post-form">
+    <mat-label>Point</mat-label>
+    <input #input matInput placeholder="Numéro" class="search-post-form">
   </mat-form-field>
   <div class="select-container">
     <select class="select" (change)="selectChanged($event.target.value)" >
@@ -23,8 +23,8 @@
 
        <!-- zone Column -->
        <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header > Nom </th>
-        <td mat-cell *matCellDef="let element"> {{element?.name}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header > Numéro </th>
+        <td mat-cell *matCellDef="let element"> {{element?.number}} </td>
       </ng-container>
 
     <!-- latitude Latitude -->
