--- a/frontend/src/users/users.component.html
+++ b/frontend/src/users/users.component.html
@@ -1,12 +1,12 @@
 <h1> Tous les utilisateurs de l'application </h1>
-<div class="row actions ">
-  <form class="search-post-form col-md-2">
+<div class="actions">
+  <form class="search-post-form">
     <mat-form-field class="full-width">
       <mat-label>Utilisateur</mat-label>
-      <input #input matInput placeholder="Ex. post name" class="search-post-form">
+      <input #input matInput placeholder="Nom" class="search-post-form">
     </mat-form-field>
   </form>
-  <div class="add-btn col-md-1 offset-md-9">
+  <div class="add-btn">
     <button-component [type]="'button'" [classes]="'btn-lg btn-block btn-primary default-bg radius'"
     (clicked)="addUser()"> Ajouter
     </button-component>
@@ -21,7 +21,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header > Username </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header > Nom </th>
       <td mat-cell *matCellDef="let element"> {{element?.name}} </td>
     </ng-container>
 
