FEATURE forget password

--- a/frontend/src/athentification/athentification.component.html
+++ b/frontend/src/athentification/athentification.component.html
@@ -34,7 +34,9 @@
                 </p>
               </div>
               <div class="col-6" >
-                Already a member ?
+                <a href="/login/forgetPassword">
+                  Mot de passe oublié ?
+                </a>
               </div>
 
             </div>
