FIX front forget password

--- a/frontend/src/athentification/athentification.component.html
+++ b/frontend/src/athentification/athentification.component.html
@@ -34,7 +34,7 @@
                 </p>
               </div>
               <div class="col-6" >
-                <a href="/login/forgetPassword">
+                <a routerLink="forgetPassword" routerLinkActive>
                   Mot de passe oublié ?
                 </a>
               </div>
