--- a/frontend/src/athentification/forget-password/forget-password.component.html
+++ b/frontend/src/athentification/forget-password/forget-password.component.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="row remember-me" >
                         <div class="col-6" >
-                          <a href="/login">
+                          <a routerLink="/" routerLinkActive>
                             Login ?
                           </a>
                         </div>
