--- a/frontend/src/reclamations/reclamations-details/reclamations-details.component.sass
+++ b/frontend/src/reclamations/reclamations-details/reclamations-details.component.sass
@@ -2,7 +2,7 @@
   background-size: cover
   height: 400px
   margin-top: 10px
-.container-info  
+.container-info
   margin: 20px
   color: #2b6e2e
   h3
@@ -12,8 +12,8 @@
     color: #000
     font-size: 16px
 agm-map
-  height: 400px   
-  width: 100%
+    height: 400px
+    width: 100%
 textarea
   margin: auto
   margin-top: 10px
@@ -40,3 +40,10 @@ textarea
   &:focus
     background: none repeat scroll 0 0 #FFFFFF
     outline-width: 0
+.comment
+  border: 1px solid rgba(0, 0, 0, 0.125) !important
+  border-radius: 0.25rem !important
+  i
+    margin: 0
+    margin-top: -18px
+    float: right
